pretty_woman/log/build_2021-03-13_14-00-52/pretty_woman/stderr.log
  File "/Users/grigorijhanin/gravitsapa/pretty_woman/install/pretty_woman/lib/python3.8/site-packages/pretty_woman/test_node.py", line 18
    loop.start()
    ^
SyntaxError: invalid syntax

